# AWS-Vanderbilt-hackathon

./: .gitignore  .gitmodules  README.md  bruh.txt  challenges.txt  example.json  path_generation.py  path_points.json
BBB_UART_reciever/: Event_Publisher.py  README.md  event_publisher.py  uart_reciever.py
Tiva/: README.md
Tiva/TIVA_AHMED_RTOS/: general_drivers.h  vanderbilt.c  vanderbilt_threads.c  vanderbilt_threads.h
Tiva/TIVA_AHMED_RTOS/MultimodDrivers/: multimod.h  multimod_uart.h
Tiva/TIVA_AHMED_RTOS/MultimodDrivers/src/: multimod_BMI160.c  multimod_uart.c
Tiva/TIVA_AHMED_RTOS/Tiva_RTOS_Moving_Subs/: .cproject  GFX_Library.c  GFX_Library.h  final.c  final_threads.c  final_threads.h  general_drivers.h  vanderbilt.c  vanderbilt_threads.c  vanderbilt_threads.h
Tiva/TIVA_AHMED_RTOS/Tiva_RTOS_Moving_Subs/.launches/: Lab4.launch
Tiva/TIVA_AHMED_RTOS/Tiva_RTOS_Moving_Subs/G8RTOS/: G8RTOS_CriticalSection.h  G8RTOS_IPC.h  G8RTOS_Scheduler.h  G8RTOS_Semaphores.h
Tiva/TIVA_AHMED_RTOS/Tiva_RTOS_Moving_Subs/G8RTOS/src/: G8RTOS_IPC.c  G8RTOS_Scheduler.c  G8RTOS_SchedulerASM.s  G8RTOS_Semaphores.c
Tiva/TIVA_AHMED_RTOS/Tiva_RTOS_Moving_Subs/MultimodDrivers/: multimod.h  multimod_PCA9956b.h  multimod_ST7789.h  multimod_i2c.h  multimod_uart.h
Tiva/TIVA_UART/: multimod_uart.h
aws_iot_core/: Nikhil-LAPTOP-Policy  Nikhil-LAPTOP.cert.pem  Nikhil-LAPTOP.private.key  Nikhil-LAPTOP.public.key  subA-Policy  subA.cert.pem  subA.private.key  subA.public.key
config/: launch_sim.launch.py  launch_sim.launch.xml  launch_sim_gui.launch.py  launch_uuv.launch.py  mqtt_client_params.yaml  ros_gz_bridge.yaml  torpedo.sdf  world.sdf
esp32/: README.md
esp32/BLE_Range_to_tiva/: BLE_Range_to_tiva.ino
esp32/BLE_to_TIVA_Frames/: BLE_to_TIVA_Frames.ino
esp32/ESP_NOW_Broadcast_Master/: ESP_NOW_Broadcast_Master.ino
esp32/ESP_NOW_Broadcast_Slave/: ESP_NOW_Broadcast_Slave.ino
esp32/Range_limiter/: Range_limiter.ino
esp32/TIVA_UART/: Vandy_hacky.c  multimod_uart.c
esp32/Vandy_wifi_range/: Vandy_wifi_range.ino
esp32/blinky_esp32/: blinky_esp32.ino
esp32/vandy_UART/: vandy_UART.ino
esp32/vandy_UART_2/: vandy_UART_2.ino
esp32/vandy_wifi_wayne/: vandy_wifi_wayne.ino
ros_ws/: compile_commands.json
ros_ws/src/custom_msg/: CMakeLists.txt  package.xml
ros_ws/src/custom_msg/msg/: Event.msg  Plan.msg
ros_ws/src/uuv/: CMakeLists.txt  package.xml
ros_ws/src/uuv/launch/: swarm_demo.launch.py
ros_ws/src/uuv/src/: uuv_planner.cpp
ros_ws/src/uuv_py/: package.xml  setup.cfg  setup.py
ros_ws/src/uuv_py/uuv_py/: _mqtt_dump.py  mqtt_dump.py  mqtt_upload.py
ros_ws/src/uuv_sim/: CMakeLists.txt  package.xml
ros_ws/src/uuv_sim/src/: uuv_pose.cpp
ros_ws/src/uuv_sim_py/: package.xml  setup.cfg  setup.py
ros_ws/src/uuv_sim_py/uuv_sim_py/: objects.py  sim.py
(+6 files in other folders)
